# seaborgium

./: .clang-format  .gitignore  .gn  BUILD.gn  CMakeLists.txt  README  regen.bat
src/: core.h  docking_resizer.cc  docking_resizer.h  docking_split_container.cc  docking_split_container.h  docking_test.cc  docking_tool_window.cc  docking_tool_window.h  docking_workspace.cc  docking_workspace.h  drag_direction.h  drag_setup.h  draggable.h  entry.cc  entry.h  focus.cc  focus.h  geometric_types.h  gfx.h  gfx_win.cc  leak_check_test.h  main.cc  resource.h  scroll_helper.cc  scroll_helper.h  sg.rc  skin.cc  skin.h  solid_color.h  spscqueue.h  string_piece.h  test_stubs.cc  text_edit.cc  text_edit.h  threading.h  tool_window_dragger.cc  tool_window_dragger.h  tree_grid.cc  tree_grid.h  tree_grid_test.cc  (+2 more)
src/core/: core.h  entry.cc  entry.h  geometric_types.h  gfx.cc  gfx.h  gfx_win.cc  leak_check_test.h  rect_pack.h  rect_pack_test.cc  resource.h  string_piece.h  zevv-peep.h
src/source_view/: cpp_lexer.cc  cpp_lexer.h  generate_cpp_lexer_data.py  lexer.cc  lexer.h  lexer_state.cc  lexer_state.h  lexer_test.cc  source_view.cc  source_view.h
src/ui/: dockable.cc  dockable.h  docking_resizer.cc  docking_resizer.h  docking_split_container.cc  docking_split_container.h  docking_test.cc  docking_tool_window.cc  docking_tool_window.h  docking_workspace.cc  docking_workspace.h  drag_direction.h  drag_setup.h  draggable.h  drawing_common.cc  drawing_common.h  focus.cc  focus.h  input.h  scroll_helper.cc  scroll_helper.h  skin.cc  skin.h  solid_color.h  test_stubs.cc  text_edit.cc  text_edit.h  tool_window_dragger.cc  tool_window_dragger.h  tree_grid.cc  tree_grid.h  tree_grid_test.cc  widget.cc  widget.h
src/ui/source_view/: cpp_lexer.cc  lexer.cc  lexer.h  lexer_state.cc  lexer_state.h  lexer_test.cc  source_view.cc  source_view.h
tools/: lint.py  regen.bat
